--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,16 @@
   --background: #fff;
   --white: #ffffff;
   --ocean: #404bbf;
+  --cloud: #f4f4fd;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--background);
+}
+.container {
+  width: 1440px;
+  margin: 0 auto;
 }
 .list {
   list-style: none;
@@ -24,6 +29,7 @@ body {
   font-size: 18px;
   line-height: 1.33;
   display: flex;
+  margin-right: 76px;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -41,6 +47,9 @@ body {
 }
 
 /* HW-1 */
+.header-container {
+  display: flex;
+}
 .hw-header-link {
   font-weight: 500;
   font-size: 16px;
@@ -49,6 +58,7 @@ body {
   color: var(--navyblue);
 }
 .hw-header {
+  display: flex;
 }
 
 .hw-header-list:hover,
@@ -57,6 +67,8 @@ body {
   color: purple;
 }
 .hw-header-list {
+  display: flex;
+  gap: 40px;
   background-color: var(--cornflower);
   font-weight: 500;
   font-size: 16px;
@@ -72,6 +84,9 @@ body {
   color: var(--navyblue);
 }
 .hw-header-address {
+  margin-left: auto;
+  gap: 40px;
+  display: flex;
   font-style: normal;
 }
 .hw-header-mail {
@@ -81,6 +96,8 @@ body {
   color: var(--slate);
 }
 .hw-header-tel {
+  margin-right: 40px;
+
   font-size: 16px;
   line-height: 1.5;
 
@@ -91,6 +108,7 @@ body {
   background-color: var(--navyblue);
 }
 .hw-hero-title {
+  padding: 188px 472px 292px;
   font-weight: 500;
   font-size: 56px;
   line-height: 1.07;
@@ -108,8 +126,11 @@ body {
   background-color: var(--iris);
 }
 .hw-strategy {
+  padding: 120px 0px;
 }
 .hw-strategy-list {
+  display: flex;
+  gap: 24px;
 }
 
 .hw-strategy-title {
@@ -126,18 +147,33 @@ body {
 }
 
 .hw-do {
+  padding: 120px 0;
 }
 .hw-team {
+  background-color: var(--cloud);
+}
+.hw-do-container {
+}
+.hw-do-content {
+  align-items: center;
+  gap: 24px;
 }
 .list {
+}
+.hw-do-title {
+  margin-bottom: 72px;
+  text-align: center;
 }
 .hw-team-title {
   font-weight: 700;
   font-size: 36px;
+  text-align: center;
   line-height: 1.11;
   color: var(--navyblue);
 }
 .hw-team-item {
+  display: flex;
+  gap: 24px;
 }
 .hw-team-name {
   font-weight: 500;
@@ -165,11 +201,14 @@ body {
   background-color: var(--cornflower);
 }
 .header-navigation {
+  display: flex;
 }
 .header-logo {
   font-family: 'Raleway', sans-serif;
 }
 .header-list {
+  display: flex;
+  gap: 40px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -191,6 +230,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navyblue);
+}
+.header-content {
+  display: flex;
+}
+.header-address {
 }
 .header-mail {
   font-style: normal;
@@ -223,6 +267,9 @@ body {
   color: var(--white);
 }
 .hero-list {
+  margin: 168px 427px;
+  display: flex;
+  gap: 24px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -241,6 +288,10 @@ body {
 .portfolio {
 }
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-bottom: 48px;
 }
 .portfolio-item {
   font-weight: 500;
