--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ body {
   color: purple;
 }
 .hw-header-list {
+  margin-top: 24px;
+  margin-bottom: 24px;
   display: flex;
   gap: 40px;
   background-color: var(--cornflower);
@@ -81,8 +83,8 @@ body {
   letter-spacing: 0.02em;
   color: var(--navyblue);
   padding-right: 220px;
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  padding: auto;
 }
 .hw-header-item {
   font-weight: 500;
@@ -129,7 +131,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--white);
 }
+
 .hw-hero-btn {
+  text-align: center;
+  margin-top: 48px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -138,6 +143,10 @@ body {
   letter-spacing: 0.04em;
   color: var(--white);
   background-color: var(--iris);
+  width: 169px;
+  height: 56px;
+  left: 636px;
+  top: 428px;
 }
 .hw-strategy {
   padding: 120px 0px;
@@ -326,7 +335,6 @@ body {
   color: var(--iris);
 }
 .portfolio-text {
-  background-color: var(--cornflower);
 }
 .portfolio-background {
   gap: 24px;
