--- a/css/styles.css
+++ b/css/styles.css
@@ -226,11 +226,20 @@ body {
   letter-spacing: 0.02em;
   color: var(--navyblue);
 }
+.hw-footer {
+  background-color: var(--navyblue);
+}
 .footer-title {
+  width: 264px;
+  height: 72px;
+  left: 156px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cornflower);
+}
+.logo-footer {
+  color: var(--cloud);
 }
 
 /* HW-1 */
@@ -325,6 +334,8 @@ body {
 }
 
 .hero-btn {
+  width: 116px;
+  height: 48px;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -340,7 +351,7 @@ body {
   gap: 24px;
   padding-top: 32px;
   padding-bottom: 8px;
-  text-align: center;
+
   margin: 0;
   padding: 0;
   display: flex;
@@ -349,6 +360,7 @@ body {
 .portfolio {
 }
 .portfolio-list {
+  padding-left: 0;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
@@ -369,6 +381,7 @@ body {
 }
 
 .footer {
+  background-color: var(--navyblue);
 }
 .footer-logo {
   font-family: 'Raleway', sans-serif;
@@ -382,6 +395,9 @@ body {
   top: 1864px;
 }
 .footer-subtitle {
+  width: 264px;
+  height: 72px;
+  left: 156px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
